# adaptive-learning-with-crewai-xysq

./: .env.example  .gitignore  README.md  api_server.py  app.py  nixpacks.toml  pyproject.toml  railway.toml
data/: topics.json  uploads.json
frontend/: .env.example  index.html
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: Header.css  Header.jsx  LearningPhase.css  LearningPhase.jsx  MemoryCard.jsx  QuestionCard.jsx  QuizPhase.css  QuizPhase.jsx  ResultsPhase.css  ResultsPhase.jsx  ScoreDisplay.css  ScoreDisplay.jsx  SelectPhase.css  SelectPhase.jsx  SetupPage.css  SetupPage.jsx  Sidebar.css  Sidebar.jsx
src/xysq_crewai/: crew.py  main.py  memory_tools.py
src/xysq_crewai/config/: agents.yaml  assessment_tasks.yaml  learning_tasks.yaml  tasks.yaml
